# quantum_for_csc_book_notes

./: .gitignore  .gitmodules  .travis.yml  README.md
exercises/: .gitignore  CMakeLists.txt  compile_commands.json
exercises/chapter1/: CMakeLists.txt  chapter1.cpp  complex.hpp  test_chapter1.cpp  test_complex.cpp
exercises/chapter2/: CMakeLists.txt  chapter2.cpp  complex.hpp  test_chapter2.cpp  test_complex.cpp
exercises/chapter2/include/chapter2/: chapter2.hpp
exercises/chapter3/: CMakeLists.txt  chapter3.cpp  complex.hpp  test_complex.cpp  tf_demo.cpp
exercises/chapter3/include/chapter3/: chapter3.hpp
exercises/chapter4/: CMakeLists.txt  chapter4.cpp  test_chapter4.cpp
exercises/chapter4/include/chapter4/: chapter4.hpp
exercises/chapter5/: CMakeLists.txt  test_chapter5.cpp
exercises/chapter5/include/chapter5/: chapter5.hpp
